Ensure popups are always properly aligned with canvas vertically
So that popups would be positioned correctly if there was content on the
page above the canvas

--- a/rotate/style.css
+++ b/rotate/style.css
@@ -39,6 +39,11 @@
     margin-bottom: 10px;
 }
 
+
+#canvas-wrapper {
+    position: relative;
+}
+
 canvas {
     display: block;
     margin:auto;
